--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@types/node": "^20.14.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-scroll": "^1.8.9",
